--- a/qna.yaml
+++ b/qna.yaml
@@ -3,52 +3,38 @@ domain: employee code conduct
 created_by: kaknox_rht
 seed_examples:
   - context: |
-      **Phoenix** is a minor [constellation](constellation "wikilink") in the
-      [southern sky](southern_sky "wikilink"). Named after the mythical
-      [phoenix](Phoenix_(mythology) "wikilink"), it was first depicted on a
-      celestial atlas by [Johann Bayer](Johann_Bayer "wikilink") in his 1603
-      *[Uranometria](Uranometria "wikilink")*. The French explorer and
-      astronomer [Nicolas Louis de
-      Lacaille](Nicolas_Louis_de_Lacaille "wikilink") charted the brighter
-      stars and gave their [Bayer designations](Bayer_designation "wikilink")
-      in 1756. The constellation stretches from roughly −39 degrees to −57 degrees
-      [declination](declination "wikilink"), and from 23.5h to 2.5h of [right
-      ascension](right_ascension "wikilink"). The constellations Phoenix,
-      [Grus](Grus_(constellation) "wikilink"),
-      [Pavo](Pavo_(constellation) "wikilink") and [Tucana](Tucana "wikilink"),
-      are known as the Southern Birds.
+      Our clients, colleagues, regulators and shareholders all trust us and
+      depend on us to act with integrity and always do the right thing, even
+      when it is hard.  Our Code of Conduct is our guide to ethical behavior.
+      No matter what your role is at the firm, you are responsible for
+      understanding it and abiding by it. This means taking action if you feel
+      something is not right. It means immediately intervening by speaking up
+      if you see or suspect inappropriate behavior. It also means ensuring your
+      own daily decisions stay true to our Mission and Value Proposition and are
+      in our clients' interests, create economic value and are systemically responsible.
+      Our success as a firm relies on our collective accountability. Just one crack in
+      the foundation of trust can undermine our ability to deliver for each other and
+      our clients. We each have a role at Citi, and we must hold ourselves and each
+      other accountable in our daily work to achieve our goals. As you do so, know
+      that we prohibit any form of retaliatory action against anyone who raises
+      concerns about actual or potential wrong doing.
     questions_and_answers:
       - question: |
-          What is the Phoenix constellation?
+          What is our code of conduct?
         answer: |
-          Phoenix is a minor constellation in the southern sky.
+          Our code of conduct is our guide to ethical behavior.
       - question: |
-          Who charted the Phoenix constellation?
+          What is the mission and value proposition of the code of conduct?
         answer: |
-          The Phoenix constellation was charted by french explorer and
-          astronomer Nicolas Louis de Lacaille.
+          The mission and value proposition of the code of conduct are ensuring your
+          own daily decisions stay true to our clients' interests, creating econmic value
+          and are systemically responible. 
       - question: |
-          How far does the Phoenix constellation stretch?
+          What retaliatory actions can be taken against the employee?
         answer: |
-          The phoenix constellation stretches from roughly −39° to −57°
-          declination, and from 23.5h to 2.5h of right ascension.
+          Citi prohibits any form of retaliatory action against anyone who raises concerts about actual or potential wrong doing. 
   - context: |
-      Phoenix was the largest of the 12 constellations established by [Petrus
-      Plancius](Petrus_Plancius "wikilink") from the observations of [Pieter
-      Dirkszoon Keyser](Pieter_Dirkszoon_Keyser "wikilink") and [Frederick de
-      Houtman](Frederick_de_Houtman "wikilink"). It first appeared on a 35cm
-      diameter celestial globe published in 1597 (or 1598) in Amsterdam by
-      Plancius with [Jodocus Hondius](Jodocus_Hondius "wikilink"). The first
-      depiction of this constellation in a celestial atlas was in [Johann
-      Bayer](Johann_Bayer "wikilink")'s
-      *[Uranometria](Uranometria "wikilink")* of 1603. De Houtman included
-      it in his southern star catalog the same year under the Dutch name *Den
-      voghel Fenicx*, "The Bird Phoenix", symbolising the
-      [phoenix](Phoenix_(mythology) "wikilink") of classical mythology. One
-      name of the brightest star [Alpha
-      Phoenicis](Alpha_Phoenicis "wikilink")—Ankaa—is derived from the Arabic:
-      العنقاء, romanized: al-‘anqā’, lit. 'the phoenix', and
-      was coined sometime after 1800 in relation to the constellation.
+      
     questions_and_answers:
       - question: |
           What is the brightest star in the Phoenix constellation
@@ -66,32 +52,7 @@ seed_examples:
         answer: |
           "The Bird Phoenix" symbolizes the phoenix of classical mythology.
   - context: |
-      Phoenix is a small constellation bordered by [Fornax](Fornax "wikilink")
-      and Sculptor to the north, Grus to the west, Tucana to the south,
-      touching on the corner of [Hydrus](Hydrus "wikilink") to the south, and
-      [Eridanus](Eridanus_(constellation) "wikilink") to the east and
-      southeast. The bright star [Achernar](Achernar "wikilink") is
-      nearby. The three-letter abbreviation for the constellation, as
-      adopted by the [International Astronomical
-      Union](International_Astronomical_Union "wikilink") in 1922, is
-      "Phe". The official constellation boundaries, as set by Belgian
-      astronomer [Eugène Delporte](Eugène_Joseph_Delporte "wikilink") in 1930,
-      are defined by a polygon of 10 segments. In the [equatorial coordinate
-      system](equatorial_coordinate_system "wikilink"), the [right
-      ascension](right_ascension "wikilink") coordinates of these borders lie
-      between 23<sup>h</sup> 26.5<sup>m</sup> and 02<sup>h</sup> 25.0<sup>m</sup>,
-      while the [declination](declination "wikilink")
-      coordinates are between −39.31° and −57.84°. This means it remains
-      below the horizon to anyone living north of the [40th
-      parallel](40th_parallel_north "wikilink") in the [Northern
-      Hemisphere](Northern_Hemisphere "wikilink"), and remains low in the sky
-      for anyone living north of the [equator](equator "wikilink"). It is most
-      visible from locations such as Australia and South Africa during late
-      [Southern Hemisphere](Southern_Hemisphere "wikilink") spring. Most
-      of the constellation lies within, and can be located by, forming a
-      triangle of the bright stars Achernar, [Fomalhaut](Fomalhaut "wikilink")
-      and [Beta Ceti](Beta_Ceti "wikilink")—Ankaa lies roughly in the centre
-      of this.
+      
     questions_and_answers:
       - question: What are the characteristics of the Phoenix constellation?
         answer: |
@@ -111,24 +72,7 @@ seed_examples:
           astronomer Eugène Delporte in 1930, are defined by a polygon of 10
           segments.
   - context: |
-      Ten stars have been found to have planets to date, and four planetary
-      systems have been discovered with the [SuperWASP](SuperWASP "wikilink")
-      project. [HD 142](HD_142 "wikilink") is a yellow giant that has an
-      apparent magnitude of 5.7, and has a planet ([HD 142b](HD_142_b
-      "wikilink")) 1.36 times the mass of Jupiter which orbits every 328 days.
-      [HD 2039](HD_2039 "wikilink") is a yellow subgiant with an apparent
-      magnitude of 9.0 around 330 light years away which has a planet ([HD 2039
-      b](HD_2039_b "wikilink")) six times the mass of Jupiter. [WASP-18](WASP-18
-      "wikilink") is a star of magnitude 9.29 which was discovered to have a hot
-      Jupiter-like planet ([WASP-18b](WASP-18b "wikilink")) taking less than a
-      day to orbit the star. The planet is suspected to be causing WASP-18 to
-      appear older than it really is. [WASP-4](WASP-4 "wikilink") and
-      [WASP-5](WASP-5 "wikilink") are solar-type yellow stars around 1000
-      light years distant and of 13th magnitude, each with a single planet
-      larger than Jupiter. [WASP-29](WASP-29 "wikilink") is an orange
-      dwarf of spectral type K4V and visual magnitude 11.3, which has a
-      planetary companion of similar size and mass to Saturn. The planet
-      completes an orbit every 3.9 days.
+      
     questions_and_answers:
       - question: In the Phoenix constellation, how many stars have planets?
         answer: |
@@ -148,31 +92,7 @@ seed_examples:
           years distant and of 13th magnitude, each with a single planet
           larger than Jupiter.
   - context: |
-      The constellation does not lie on the
-      [galactic plane](galactic_plane "wikilink") of the Milky Way, and there
-      are no prominent star clusters. [NGC 625](NGC_625 "wikilink") is a dwarf
-      [irregular galaxy](irregular_galaxy "wikilink") of apparent magnitude 11.0
-      and lying some 12.7 million light years distant. Only 24000 light years in
-      diameter, it is an outlying member of the [Sculptor Group](Sculptor_Group
-      "wikilink"). NGC 625 is thought to have been involved in a collision and
-      is experiencing a burst of [active star formation](Active_galactic_nucleus
-      "wikilink"). [NGC 37](NGC_37 "wikilink") is a
-      [lenticular galaxy](lenticular_galaxy "wikilink") of apparent magnitude
-      14.66. It is approximately 42 [kiloparsecs](kiloparsecs "wikilink")
-      (137,000 [light-years](light-years "wikilink")) in diameter and about
-      12.9 billion years old. [Robert's Quartet](Robert's_Quartet "wikilink")
-      (composed of the irregular galaxy [NGC 87](NGC_87 "wikilink"), and three
-      spiral galaxies [NGC 88](NGC_88 "wikilink"), [NGC 89](NGC_89 "wikilink")
-      and [NGC 92](NGC_92 "wikilink")) is a group of four galaxies located
-      around 160 million light-years away which are in the process of colliding
-      and merging. They are within a circle of radius of 1.6 arcmin,
-      corresponding to about 75,000 light-years. Located in the galaxy ESO
-      243-49 is [HLX-1](HLX-1 "wikilink"), an
-      [intermediate-mass black hole](intermediate-mass_black_hole
-      "wikilink")—the first one of its kind identified. It is thought to be a
-      remnant of a dwarf galaxy that was absorbed in a
-      [collision](Interacting_galaxy "wikilink") with ESO 243-49. Before its
-      discovery, this class of black hole was only hypothesized.
+      
     questions_and_answers:
       - question: |
           Is the Phoenix Constellation part of the Milky Way?
