--- a/antora.yml
+++ b/antora.yml
@@ -5,4 +5,6 @@ nav:
 - modules/ROOT/nav.adoc
 - modules/LABENV/nav.adoc
 - modules/chapter2/nav.adoc
+- modules/chapter1/nav.adoc
+- modules/chapter3/nav.adoc
 - modules/appendix/nav.adoc
