--- a/antora.yml
+++ b/antora.yml
@@ -4,6 +4,7 @@ version: 2.12
 nav:
 - modules/ROOT/nav.adoc
 - modules/chapter1/nav.adoc
+- modules/chapter4/nav.adoc
 - modules/chapter3/nav.adoc
 - modules/appendix/nav.adoc
 - modules/LABENV/nav.adoc
