--- a/antora.yml
+++ b/antora.yml
@@ -4,6 +4,8 @@ version: 2.12
 nav:
 - modules/ROOT/nav.adoc
 - modules/chapter1/nav.adoc
+- modules/chapter6/nav.adoc
+- modules/chapter5/nav.adoc
 - modules/appendix/nav.adoc
 - modules/LABENV/nav.adoc
 - modules/chapter2/nav.adoc
